--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,8 +22,8 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: luipero
+          password: dckr_pat_q5KHJhUrirBrzyvjN3x6I_6_VOY
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1
