--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,15 +22,15 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: luipero
-          password: dckr_pat_q5KHJhUrirBrzyvjN3x6I_6_VOY
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: luipero
-          password: ug-x#~F$xu547D`
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHRC_TOKEN }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
@@ -39,5 +39,6 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: | #
-            raul-profesor/practica7.1:latest 
-            ghcr.io/raul-profesor/practica7.1:latest 
+            luipenrom/practica7.1:latest 
+            ghcr.io/luipero/practica7.1:latest 
+
