Vamos a ver que pasa con DockerHub v7

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,6 +39,6 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: | #
-            luipenrom/practica7.1:latest 
-            ghcr.io/luipero/practica7.1:latest 
+            luipero/practica_7.1:latest 
+            ghcr.io/luipenrom/practica_7.1:latest 
 
