--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,12 +25,14 @@ jobs:
           username: luipero
           password: dckr_pat_q5KHJhUrirBrzyvjN3x6I_6_VOY
       -
+
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: luipenrom
-          password: ug-x#~F$xu547D`
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHRC_TOKEN }}
+          
       -
         name: Build and push
         uses: docker/build-push-action@v2
