--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,8 +22,8 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secret.pruebaDAW_USERNAME }}
-          password: ${{ secret.pruebaDAW_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
 
         name: Login to GitHub Container Registry
@@ -31,7 +31,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secret.pruebaDAW_TOKEN }}
+          password: ${{ secrets.GHRC_TOKEN }}
           
       -
         name: Build and push
